[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalighter"
version = "0.1.0"
description = "Basic custom tools for python data science"
authors = [{ name = "Demetrio Magatti" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
